לילי 14, 15, 16 חבלז שוכו קר ועוד

--- a/index.html
+++ b/index.html
@@ -573,6 +573,8 @@ Error message and password prompt
 
 <li>זקופי הגו</li>
 
+<li>חבל&quot;ז שוכ&quot;ו ק&quot;ר</li>
+
 <li>חומרים</li>
 
 <li>חזרת</li>
@@ -736,6 +738,12 @@ Error message and password prompt
 <li>לילי 11</li>
 
 <li>לילי 12</li>
+
+<li>לילי 13</li>
+
+<li>לילי 14</li>
+
+<li>לילי 15</li>
 
 <li>לפתן חבושים</li>
 
@@ -8869,7 +8877,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20180213183313016" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180213183509524" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180227113837613" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8878,7 +8886,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מוזיקה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לילי 15]] [[לילי 14]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8898,7 +8906,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180219163203252" title="$:/temp/search">
+<div created="20161023184814872" modified="20180227103259904" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9688,12 +9696,12 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[אחות כהן]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170415105721479" modified="20171219223225453" tags="[[קופים ממונעים]]" title="אחיות חוץ">
+<div created="20170415105721479" modified="20180227102945823" tags="[[קופים ממונעים]]" title="אחיות חוץ">
 <pre>[img[pictures/ahayot-huz.jpg]]
 
 !!![[גורה]]:
 
-[[ליויו|יויו]] יש את הנטיה להיקשר רגשית גם לאנשים שלא יודעים כלל על קיומו, עד כדי שהוא מרגיש שהם אחיות שלו. כאלה הן רוב אחיות החוץ - ויש הרבה מאד אחיות חוץ מבחינתנו. כאן [[בגנזך|נאמני הגנזך]] אנו מוסיפות מפעם לפעם, באהבה והערצה, כשאחות חוץ כלשהי צצה בזכרון מי מאיתנו, בהקשר לדברים שרצתה להגיד או משהו.
+[[ליויו|יויו]] יש את הנטיה להיקשר רגשית גם לאנשים שלא יודעים כלל על קיומו, עד כדי שהוא מרגיש שהם אחיות שלו. כאלה הן אחיות החוץ - ויש הרבה מאד אחיות חוץ מבחינתנו. כאן [[בגנזך|נאמני הגנזך]] אנו מוסיפות מפעם לפעם, באהבה והערצה, כשאחות חוץ כלשהי צצה בזכרון מי מאיתנו, בהקשר לדברים שרצתה להגיד או משהו.
 
 
 
@@ -9872,14 +9880,14 @@ well,
 
 ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
 </div>
-<div created="20180218104549044" modified="20180219184851859" tags="[[אחיות חוץ]]" title="אלן בול">
+<div created="20180218104549044" modified="20180228150528984" tags="[[אחיות חוץ]]" title="אלן בול">
 <pre>[img[pictures/alan-ball.jpg]]
 
 !!![[גורה]]:
 
 את הציור  עשיתי מהתמונה [[הזו|https://www.npr.org/sections/monkeysee/2012/08/25/160004142/alan-ball-on-leaving-true-blood-behind]] של [[אלן בול|http://www.imdb.com/name/nm0050332/?ref_=tt_ov_wr]].
 
-רק לפני שבועיים התוודעתי לקיומו, כי רק לפני שבועיים ראיתי את [[עמוק באדמה]] ממנה כל כך נהניתי, ויומיים אחרי שסיימתי את עמוק עברתי [[לדם אמיתי|http://www.imdb.com/title/tt0844441/?ref_=nm_ov_bio_lk3]] שהיא תענוג. [[ראו כמה ענוג הוא האיש|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
+רק לפני שבועיים התוודעתי לקיומו, כי רק לפני שבועיים ראיתי את [[עמוק באדמה]] ממנה כל כך נהניתי, ויומיים אחרי שסיימתי את עמוק, עברתי [[לדם אמיתי|http://www.imdb.com/title/tt0844441/?ref_=nm_ov_bio_lk3]] שהיא בידור לא נורמלי. [[ראו את הפשוש|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
 </pre>
 </div>
 <div created="20170328195137638" modified="20180125170035408" tags="[[אחות כהן]] [[ילדים חד הוריים]] [[אני רוצה להתנצל]]" title="אלפרד">
@@ -10162,12 +10170,12 @@ well,
 
 </pre>
 </div>
-<div created="20171212171900725" modified="20171225144633679" title="ביג לבובסקי">
+<div created="20171212171900725" modified="20180227132225898" title="ביג לבובסקי">
 <pre>[img[pictures/the-big-lebowski.jpg]]
 
 !!![[יויו]]:
 
-אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לובובסקי|http://www.imdb.com/title/tt0118715/]] מבחינתי הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|סטיב בושמי]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים לפזר את האפר שלו.
+אני מת על [[האחים כהן|איתן וג'ואל כהן]], אבל[[ ביג לבובסקי|http://www.imdb.com/title/tt0118715/]] do מבחינתי הוא אבן דרך, ואני מרגיש [[דודיסט|https://www.youtube.com/watch?v=92EChuYNV-M]]. זה מאד עצוב [[שדוני|סטיב בושמי]] מת בסוף, ואז [[הדוד|ג'ף ברידג'ס]]  [[ווולטר|ג'ון גודמן]] הולכים לפזר את האפר שלו.
 </pre>
 </div>
 <div created="20170623150317093" modified="20180208153618091" tags="[[אחיות חוץ]] מוזיקה" title="ביורק">
@@ -11700,12 +11708,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170923082302700" modified="20171114133313808" tags="הסופרנוס" title="הסוף נשאר פתוח">
+<div created="20170923082302700" modified="20180227115506825" tags="הסופרנוס" title="הסוף נשאר פתוח">
 <pre>[img[pictures/sof-hasopranos.jpg]]
 
 !!![[אנג'ליק]]:
 
-במהלך השבועיים שלושה האחרונים, כל עולמי היה הסופרנוס, שבאו לי בזמן מתאים. המחשבות לא הפסיקו. טוני, אימו, אשתו, [[מדו]], איי ג'יי, אנקל ג'וניור, אביו, הקולגות שלו, אחותו. הסדרה נגעה בי בכל רמה ומישור. אימא רעה, אהבה, פחד, סרטים, אוכל, נאמנות, משפחה, משפחה כגוף פוליטי, מיניות, אלימות, שוויוניות, יושר. [[הסוף נשאר פתוח|https://www.youtube.com/watch?v=rnT7nYbCSvM]]. אולי טוני חייב למות, כי מה? עדיף שישב בכלא בשארית חייו ויחזור בתשובה? עדיף שיישאר עם [[פולי|http://www.imdb.com/name/nm0802831/?ref_=ttfc_fc_cl_t7]]?
+במהלך השבועיים שלושה האחרונים, כל עולמי היה הסופרנוס, שבאו לי בזמן מתאים. המחשבות לא השתוללו. טוני, אימו, אשתו, [[מדו]], איי ג'יי, אנקל ג'וניור, אביו, הקולגות שלו, אחותו. הסדרה נגעה בי בכל רמה ומישור. אימא רעה, אהבה, פחד, סרטים, אוכל, נאמנות, משפחה, משפחה כגוף פוליטי, מיניות, אלימות, שוויוניות, יושר. [[הסוף נשאר פתוח|https://www.youtube.com/watch?v=rnT7nYbCSvM]]. אולי טוני חייב למות, כי מה? עדיף שישב בכלא בשארית חייו ויחזור בתשובה? עדיף שיישאר עם [[פולי|http://www.imdb.com/name/nm0802831/?ref_=ttfc_fc_cl_t7]]?
 
 אולי - גם אם הוא מת, [[הוא מת מואר|https://www.youtube.com/watch?v=S-cbOl96RFM]] בחייק משפחתו הנפלאה. אולי הוא יוכל לעבוד בחסות המאפיונרים האמיתיים - רשויות החוק, והם יחלקו איסלמופוביה? או פשוט קסנופוביה? שכן, ראינו את מדו רצה לכוון דלת המסעדה אחרי שהחנתה סוף סוף, ואת טוני מפעיל את הג'וקבוקס, מביט לדלת - ומסך שחור. גם אם הוא נורה, לא בטוח שזה היה כשהם אכלו את טבעות הבצל, למרות שמבטו האחרון בסדרה לא היה מחייך.
 
@@ -11925,6 +11933,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [[אירי]] טוענת, שאלה שבגלגול הזה, מסיימים את התיישרות הגו שלהם, והופכים להיות מהולכי על ארבע להולכי על שתיים, סיימו את העניינים שלהם כאן על הכדור הזה בגלקסיה הזו.
 
 היא גם טוענת, [[שדיוויד בואי|דיוויד בואי]] הוא דוגמה טובה לזקוף גו וגם [[פה]].</pre>
+</div>
+<div created="20180221193850741" modified="20180221193918460" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
+<pre>[img[pictures/chavlaz.jpg]]</pre>
 </div>
 <div created="20170515195747350" modified="20170517235122386" tags="[[המטבח על פי ז'נבייב]]" title="חומרים">
 <pre>[img[pictures/chomarim.jpg]]
@@ -12798,12 +12809,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 5. כשהכרובית צלויה מספיק מעבירים אותה לקערה. סוחטים מעל מיץ מרבע לימון עד חצי לימון, קורט מלח ים, פלפל שחור גרוס, מקשטים עם כף-שלוש כפות טחינה גולמית ומגישים.
 </pre>
 </div>
-<div created="20170923082157875" modified="20170924161317744" tags="הסופרנוס" title="כריסטופר מולטיסנטי">
+<div created="20170923082157875" modified="20180227115738708" tags="הסופרנוס" title="כריסטופר מולטיסנטי">
 <pre>[img[pictures/christopher-moltisanti.jpg]]
 
 !!![[יויו]]:
 
-כשבסוף הסידרה גורמים לנו לחשוב שנשמתו של [[כריס|http://www.imdb.com/name/nm0408284/?ref_=fn_nm_nm_1]] נכנסה לתוך [[חתול|https://www.youtube.com/watch?v=xfi5I02r6xE]], אני מבין, שקיבלתי אישור קוסמי לחיבתי העזה אליו, גם ברגעים בהם הוא, אידיוט גמור, ודפוק על כל הראש.
+כשבסוף הסידרה גורמים לנו לחשוב שנשמתו של [[כריס|http://www.imdb.com/name/nm0408284/?ref_=fn_nm_nm_1]] נכנסה לתוך [[חתול|https://www.youtube.com/watch?v=xfi5I02r6xE]], אני מבין, שקיבלתי אישור קוסמי לחיבתי העזה אליו, גם ברגעים בהם הוא אידיוט גמור ודפוק על כל הראש.
 
 </pre>
 </div>
@@ -13064,10 +13075,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 כשהייתי בת ארבע ידעתי קרוא וכתוב, ובגיל חמש ידעתי לכתוב בכתב יד שנראה כשל אדם בוגר.
 </pre>
 </div>
-<div created="20180126161417831" modified="20180126161517054" tags="לילי" title="לילי 10">
+<div created="20180126161417831" modified="20180221163134374" tags="לילי" title="לילי 10">
 <pre>[img[pictures/lily-10.jpg]]
 
-במציאות נטע הייתה יפה ונעימה אפילו יותר מאשר בתמונות.</pre>
+במציאות [[נטע]] הייתה יפה ונעימה אפילו יותר מאשר בתמונות.</pre>
 </div>
 <div created="20180129114351283" modified="20180129114454326" tags="לילי" title="לילי 11">
 <pre>[img[pictures/lily-11.jpg]]
@@ -13075,11 +13086,27 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 הטיסה עברה בקלות.</pre>
 </div>
 <div created="20180219183213816" modified="20180219183645035" tags="לילי" title="לילי 12">
-<pre>
-[img[pictures/lily-12.jpg]]
+<pre>[img[pictures/lily-12.jpg]]
 
 בשדה התעופה באיסלנד חיכתה לי אדל – אותה בחרתי להיות לי לאם מאמצת, דרך סוכנות בינלאומית לאימוץ בינאישי. הכל בה מצא חן בעיני ובנוסף היה לה חתול.
 </pre>
+</div>
+<div created="20180220132219849" modified="20180227145424241" tags="לילי" title="לילי 13">
+<pre>[img[pictures/lily-13.jpg]]
+
+שתינו קפה עם נטע שחיכתה לטיסה לפריז, שם התארחה כמה ימים אצל חבר ילדות. משם היא נסעה להודו. אנחנו נסענו הבייתה.</pre>
+</div>
+<div created="20180228211946743" modified="20180301161248007" tags="לילי" title="לילי 14">
+<pre>
+[img[pictures/lily-14.jpg]]
+
+אדל תומפסון היא אישה מקסימה ונפלאה. היא קרמיקאית, והיא מכינה כלים מאד יפים ונעימים למגע ולאכילה.</pre>
+</div>
+<div created="20180302154738562" modified="20180304154017944" tags="לילי" title="לילי 15">
+<pre>
+[img[pictures/lily-15.jpg]]
+
+שבועיים אחרי הגיעו הורי הביולוגים לאיסלנד זועמים על אדל. סוקי החתול שלנו היה בהיכון על הפסנתר כשעצרתי אותם, ביקשתי מהם לשבת על הספה הזוגית בסלון ביתנו, ואמרתי להם שכתוב באמנת זכויות הילד שעליהם להקשיב לי.</pre>
 </div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
 <pre>[img[pictures/KLL6V2vFdC26B5R4.jpg]]
@@ -13239,12 +13266,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180205175902513" modified="20180219190242361" tags="" title="מוזיקה">
+<div created="20180205175902513" modified="20180228151332616" tags="" title="מוזיקה">
 <pre>[img[pictures/music.jpg]]
 
 !!![[אירי וגורה]]:
 
-בתוך כדי הניסיונות הבלתי פוסקים שלנו להבין את העולם הזה בו אנו חיים. איך, מאיפה, לאן ועד מתי, אנו מודות על המוסיקה, [[שללב היא חודרת|https://www.youtube.com/watch?v=lx9-zAZRh1s]].
+בתוך כדי הניסיונות הבלתי פוסקים שלנו להבין את העולם הזה בו אנו חיות. איך, מאיפה, לאן והאינסוף, אנו מודות על המוסיקה, [[שללב היא חודרת|https://www.youtube.com/watch?v=lx9-zAZRh1s]].
 
 
 
@@ -13742,12 +13769,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170711173812724" modified="20171002232210293" tags="" title="סדרות">
+<div created="20170711173812724" modified="20180221193841558" tags="" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
 
 !!![[יויו]]:
 
-לאחר חיפושים, מגיע רגע בו לנרט, השמאן האינדיאני האזורי ב&quot;חשיפה לצפון&quot;, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה חבל&quot;ז שוכ&quot;ו ק&quot;ר, שלא לדבר על זה שאחרי 12 עונות של [[האנטומיה של גריי]] אני כשיר להיות רופא מנתח.
+לאחר חיפושים, מגיע רגע בו לנרט, השמאן האינדיאני האזורי ב//חשיפה לצפון//, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה [[חבל&quot;ז שוכ&quot;ו ק&quot;ר]], שלא לדבר על זה שאחרי 12 עונות של [[האנטומיה של גריי]] אני כשיר להיות רופא מנתח.
 
 
 &lt;&lt;list-links filter:&quot;[tag[סדרות]]&quot;&gt;&gt;
@@ -13814,7 +13841,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20171219115813335" modified="20180107152513660" tags="[[אחיות חוץ]]" title="סטיב בושמי">
+<div created="20171219115813335" modified="20180227132503209" tags="[[אחיות חוץ]]" title="סטיב בושמי">
 <pre>[img[pictures/steve-buscemi.jpg]]
 
 !!![[יויו]]:
@@ -13823,9 +13850,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 הוא אחד השחקנים שאני הכי אוהב בכל לבי, והוא נשמה ואחות.
 
-הוא נולד ביום שישי ה-13 של דצמבר 1957, הוא היה כבאי במחלקת איטליה הקטנה של עיריית ניו יורק 4 שנים. הוא שיחק ב 157 סרטים, הוא הפיק 11 סרטים. הוא בפס הקול של 8 סרטים, הוא כתב 3תסריטים, הוא שיחק ב 11 סרטים של [[אדם סנדלר|https://www.cinemablend.com/new/Quiz-Guess-Adam-Sandler-Movie-By-Steve-Buscemi-Character-70254.html]], 6 סרטים של [[האחים כהן|https://en.wikipedia.org/wiki/List_of_frequent_Coen_Brothers_collaborators]]. הוא היה מופתע כשהוצע לו התפקיד הראשי [[באימפריית הפשע|http://www.imdb.com/title/tt0979432/]] עליו זכה [[בגלובוס הזהב|https://www.youtube.com/watch?v=OGFJ6G7UmD8]]. הוא [[מת ב 20 סרטים|http://www.imdb.com/list/ls000805145/]], כולל את [[הסופרנוס]] אבל הוא הכי אהב למות [[בביג לובובסקי|https://www.youtube.com/watch?v=CWtby5WqHdM]] כולל סיבת המוות.
+הוא נולד ביום שישי ה-13 של דצמבר 1957, הוא היה כבאי במחלקת איטליה הקטנה של עיריית ניו יורק 4 שנים. הוא שיחק ב 157 סרטים, הוא הפיק 11 סרטים. הוא בפס הקול של 8 סרטים, הוא כתב 3 תסריטים, הוא שיחק ב 11 סרטים של [[אדם סנדלר|https://www.cinemablend.com/new/Quiz-Guess-Adam-Sandler-Movie-By-Steve-Buscemi-Character-70254.html]], 6 סרטים של [[האחים כהן|https://en.wikipedia.org/wiki/List_of_frequent_Coen_Brothers_collaborators]]. הוא היה מופתע כשהוצע לו התפקיד הראשי [[באימפריית הפשע|http://www.imdb.com/title/tt0979432/]] עליו זכה [[בגלובוס הזהב|https://www.youtube.com/watch?v=OGFJ6G7UmD8]]. הוא [[מת ב 20 סרטים|http://www.imdb.com/list/ls000805145/]], כולל את [[הסופרנוס]], אבל הוא הכי אהב למות [[בביג לבובסקי|https://www.youtube.com/watch?v=CWtby5WqHdM]] כולל סיבת המוות.
 
-אתם יכולים לקרוא [[פרטי טריוויה נוספים|http://m.imdb.com/name/nm0000114/trivia?ref_=m_nm_dyk_trv]] אודות האיש. [[הנה|https://www.youtube.com/watch?v=BqVrpFXXdB0]] ראיון משעשע כבונוס, ושיהיה סטיב המתוק חזק בריא ושמח.
+אפשר לקרוא [[פרטי טריוויה נוספים|http://m.imdb.com/name/nm0000114/trivia?ref_=m_nm_dyk_trv]] אודות האיש. [[הנה|https://www.youtube.com/watch?v=BqVrpFXXdB0]] ראיון משעשע כבונוס, ושיהיה סטיב המתוק חזק בריא ושמח.
 
 
 </pre>
@@ -14498,13 +14525,13 @@ To all you ladies out there, crying all alone in your room
 And all you fellas, going down south...Not making it back...
 May the lord bless your soul, I love you girl</pre>
 </div>
-<div created="20180214165830427" modified="20180218101834723" tags="סדרות [[אחיות חוץ]]" title="עמוק באדמה">
+<div created="20180214165830427" modified="20180228150800566" tags="סדרות [[אחיות חוץ]]" title="עמוק באדמה">
 <pre>[img[pictures/six-feet-under.jpg]]
 
 !!![[גורה]]:
 
 בשבועיים האחרונים שתינו בצמא את [[עמוק באדמה|http://www.imdb.com/title/tt0248654/]].
-אם סדרות הן מה שעד לא מזמן היו ספרים עבורנו , אז עמוק באדמה הוא ספר מעולה שיש בו כל מה שאתה מבקש מספר להיות - חכם, יפה, מחכים, מצחיק, רגיש, מרגש, קיצוני, אמיתי למרות שהוא בדוי, עם דמויות שאתה אוהב והן הולכות איתך לפחות בימים בהם אתה קורא אותן, ואתה מתגעגע אליהן ורוצה לדעת קרה אחר כך, ובסוף אתה קצת מאט - כי אתה לא רוצה להיפרד מהן, וכשזה נגמר אתה ממשיך לקרוא עוד.
+אם סדרות הן מה שעד לא מזמן היו ספרים עבורנו , אז עמוק באדמה הוא ספר מעולה שיש בו כל מה שאתה מבקש מספר להיות - חכם, יפה, מחכים, מצחיק, רגיש, מרגש, קיצוני, אמיתי למרות שהוא בדוי, עם דמויות שאתה אוהב והן הולכות איתך לפחות בימים בהם אתה קורא אותן, ואתה מתגעגע אליהן ורוצה לדעת מה עוד קרה, ובסוף אתה קצת מאט - כי אתה לא רוצה להיפרד מהן, וכשזה נגמר אתה ממשיך לקרוא בזה עוד.
 
 מכל מי שמת בסדרה, הכי היה קשה לי עם המוות של [[הקדילאק|https://www.historicvehicle.org/five-famous-hearses/]] של [[קלייר|http://www.imdb.com/name/nm0024404/?ref_=tt_cl_t4]]. אחר כך זה צבט לראות אותה נוסעת במכונית קומפקטית ונטולת אופי או חן כמו אלה שעושים [[עכשיו|פעם]] אך יחד עם זה - נוסעת אל העתיד המבטיח [[בקליפ הסיום המרגיע|https://www.youtube.com/watch?v=f3-MJyRUkhs]] .
 
@@ -14993,16 +15020,16 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170417192958980" modified="20170604144119114" tags="[[אחיות חוץ]]" title="פיליפ סימור הופמן">
+<div created="20170417192958980" modified="20180227104029422" tags="[[אחיות חוץ]]" title="פיליפ סימור הופמן">
 <pre>[img[pictures/Philip-Seymour-Hoffman.jpg]]
 
 !!![[יויו]]:
 
-נכון שהוא היה חור תחת בביג לובובסקי של [[האחים כהן|איתן וג'ואל כהן]], אבל הוא עשה את זה טוב, והוא גם היה בסינקדוכה ניו- יורק של [[צ'רלי קאופמן]], שגם אותו אני מחשיב [[לאחות חוץ|אחיות חוץ]]. 
+נכון שהוא היה חור תחת [[בביג לבובסקי|ביג לבובסקי]] של [[האחים כהן|איתן וג'ואל כהן]], אבל הוא עשה את זה טוב, והוא גם היה בסינקדוכה ניו- יורק של [[צ'רלי קאופמן]], שגם אותו אני מחשיב [[לאחות חוץ|אחיות חוץ]]. 
 
 אוהב אותו כאחות,
 
-את [[פיליפ ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%9C%D7%99%D7%A4_%D7%A1%D7%99%D7%9E%D7%95%D7%A8_%D7%94%D7%95%D7%A4%D7%9E%D7%9F]].</pre>
+את [[פיליפ ז&quot;ל|http://www.imdb.com/name/nm0000450/]]</pre>
 </div>
 <div created="20170801101117385" modified="20170804144705644" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פינה באוש">
 <pre>[img[pictures/pina-bausch.jpg]]
@@ -15288,7 +15315,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20180212123730869" modified="20180213183537401" tags="[[חיות אוכל]]" title="קנלוני">
+<div created="20180212123730869" modified="20180227122049365" tags="[[חיות אוכל]]" title="קנלוני">
 <pre>[img[pictures/cannelloni.jpg]]
 
 !!![[יויו]]:
@@ -15302,9 +15329,9 @@ Fapina''
 
 3. במחבת שניה אידתי תרד, ועלי בזיליקום
 
-4. את עלי התרד והבזיליקום ערבבתי עם 250 גרם גבינה רכה ולא מלוחה שמתאימה לאפייה
+4. את עלי התרד והבזיליקום ערבבתי עם 250 גרם גבינה לבנה יבשה ולא מלוחה שמתאימה לאפייה.
 
-5. לוקחים תבנית גדולה וגלילי קנלוני, וממלאים אותם בתערובת הגבינה והתרד (מעט כל פעם, בעדינות ובעזרת האצבעות, ממלאים את מרכז הגליל), ומסדרים בתבנית.
+5. לוקחים תבנית גדולה וגלילי קנלוני, וממלאים אותם בתערובת הגבינה והתרד (מעט כל פעם, בעדינות ובעזרת האצבעות, ממלאים את פנים הגליל), ומסדרים בתבנית.
 
 6. לבשמל הוספתי שליש כוס גבינות מגוררות (גרוייר, גאודה עם כמהין ומוצרלה), ואת העגבניות הצלויות, מלח, פלפל שחור ואגוז מוסקט, ומזגתי מעל הקנלוני.
 
