לילי 16 ו 17 ודם בלאדי

--- a/index.html
+++ b/index.html
@@ -467,6 +467,8 @@ Error message and password prompt
 
 <li>דליקטסן</li>
 
+<li>דם אמיתי</li>
+
 <li>דןדן</li>
 
 <li>דןדן נסע</li>
@@ -744,6 +746,10 @@ Error message and password prompt
 <li>לילי 14</li>
 
 <li>לילי 15</li>
+
+<li>לילי 16</li>
+
+<li>לילי 17</li>
 
 <li>לפתן חבושים</li>
 
@@ -8877,7 +8883,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20180213183313016" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180227113837613" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180307182314536" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8886,7 +8892,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לילי 15]] [[לילי 14]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לילי 15]] [[דם אמיתי]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8906,7 +8912,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180227103259904" title="$:/temp/search">
+<div created="20161023184814872" modified="20180305112926271" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9880,14 +9886,14 @@ well,
 
 ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
 </div>
-<div created="20180218104549044" modified="20180228150528984" tags="[[אחיות חוץ]]" title="אלן בול">
+<div created="20180218104549044" modified="20180307124941135" tags="[[אחיות חוץ]]" title="אלן בול">
 <pre>[img[pictures/alan-ball.jpg]]
 
 !!![[גורה]]:
 
 את הציור  עשיתי מהתמונה [[הזו|https://www.npr.org/sections/monkeysee/2012/08/25/160004142/alan-ball-on-leaving-true-blood-behind]] של [[אלן בול|http://www.imdb.com/name/nm0050332/?ref_=tt_ov_wr]].
 
-רק לפני שבועיים התוודעתי לקיומו, כי רק לפני שבועיים ראיתי את [[עמוק באדמה]] ממנה כל כך נהניתי, ויומיים אחרי שסיימתי את עמוק, עברתי [[לדם אמיתי|http://www.imdb.com/title/tt0844441/?ref_=nm_ov_bio_lk3]] שהיא בידור לא נורמלי. [[ראו את הפשוש|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
+רק לפני שבועיים התוודעתי לקיומו, כי רק לפני שבועיים ראיתי את [[עמוק באדמה]] ממנה כל כך נהניתי, ויומיים אחרי שסיימתי את עמוק, עברתי [[לדם אמיתי|דם אמיתי]] שהיא בידור לא נורמלי. [[ראו את הפשוש|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
 </pre>
 </div>
 <div created="20170328195137638" modified="20180125170035408" tags="[[אחות כהן]] [[ילדים חד הוריים]] [[אני רוצה להתנצל]]" title="אלפרד">
@@ -11182,6 +11188,14 @@ different tastes, but there were things we both love: family, work, people in al
 !!![[ז'נבייב]]:
 
 זהו, שה ז'נבייב דליקטסן נפתח שלשום. אני מאד שמחה אך זהירה - כי זו בהחלט משימה יומרנית לבחור מה יהיה, מה אני מציגה, הן מבחינת חומרי גלם, הן מבחינת אוכל מוכן. בסופו של דבר ובתוספת החנות הצמודה שהתפנתה, יש חנות, שדלפק האוכל המוכן שבה נמשך לתוך החלל שבו אפשר לאכול בהגשה עצמית. המטבח נשאר באותו גודל ומהחלונות שלו אנו מוציאים, כחלק מהקניה, ירקות מאודים או צרובים על פלנצ'ה. יש גבינות, נקניקים, בשרים. סנדביצ'ים, תבשילים. מבחינת חומרים גלם, כולל פרות וירקות - אנחנו מוכרים ממה שקנינו בשוק לבישול שלנו וגם נותנים מתכונים למי שרוצה להכין בבית, ויש כמובן פינת קפה.</pre>
+</div>
+<div created="20180307125005127" modified="20180308155737731" tags="סדרות [[חיות אוכל]]" title="דם אמיתי">
+<pre>
+[img[pictures/true-blood.jpg]]
+
+!!![[יויו]]:
+
+אחחחח איזה טעים זה [[דם בלאדי|http://www.imdb.com/title/tt0844441/?ref_=ttep_ep_tt]] של מושבניקים החיים על אדמת לואיזיאנה ויש להם אחות פיה, יותר טעים מזה שבבקבוקים.</pre>
 </div>
 <div created="20161116210610208" modified="20170605164540478" tags="[[אחות כהן]]" title="דןדן">
 <pre>[img[pictures/dandan.jpg]]
@@ -13097,16 +13111,31 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 שתינו קפה עם נטע שחיכתה לטיסה לפריז, שם התארחה כמה ימים אצל חבר ילדות. משם היא נסעה להודו. אנחנו נסענו הבייתה.</pre>
 </div>
 <div created="20180228211946743" modified="20180301161248007" tags="לילי" title="לילי 14">
-<pre>
-[img[pictures/lily-14.jpg]]
+<pre>[img[pictures/lily-14.jpg]]
 
 אדל תומפסון היא אישה מקסימה ונפלאה. היא קרמיקאית, והיא מכינה כלים מאד יפים ונעימים למגע ולאכילה.</pre>
 </div>
-<div created="20180302154738562" modified="20180304154017944" tags="לילי" title="לילי 15">
-<pre>
-[img[pictures/lily-15.jpg]]
+<div created="20180302154738562" modified="20180307182224545" tags="לילי" title="לילי 15">
+<pre>[img[pictures/lily-15.jpg]]
 
-שבועיים אחרי הגיעו הורי הביולוגים לאיסלנד זועמים על אדל. סוקי החתול שלנו היה בהיכון על הפסנתר כשעצרתי אותם, ביקשתי מהם לשבת על הספה הזוגית בסלון ביתנו, ואמרתי להם שכתוב באמנת זכויות הילד שעליהם להקשיב לי.</pre>
+שבועיים אחרי הגיעו הורי הביולוגים לאיסלנד זועמים על אדל. סוקי החתול שלנו היה בהיכון על הפסנתר כשעצרתי אותם, ביקשתי מהם לשבת על הספה הזוגית בסלון ביתנו, ואמרתי להם שכתוב [[באמנת זכויות הילד|https://he.wikipedia.org/wiki/%D7%90%D7%9E%D7%A0%D7%AA_%D7%96%D7%9B%D7%95%D7%99%D7%95%D7%AA_%D7%94%D7%99%D7%9C%D7%93]] שעליהם להקשיב לחוות דעתי.</pre>
+</div>
+<div created="20180304160006578" modified="20180306102621856" tags="לילי" title="לילי 16">
+<pre>[img[pictures/lily-16.jpg]]
+
+הם ישבו והקשיבו:
+
+כשהייתי בת ארבע והתחלתי לקרוא, הבנתי שישנם אנשים בעולם הזה שמאד רוצים ילדים אך מסיבות טכניות אין להם. לעומתכם, שטכנית לא הייתה לכם כל בעיה וכך גם גידלתם אותי. אני מתוחזקת ומתופעלת לעילא בביתכם, עם מיטב המטפלות והמבשלות ותודה לכם על ההשכלה הרחבה. אך לאחר שגיליתי שמימי עומדת לעזוב – מסיבות טכניות כמובן – עם בעלה שקיבל עבודה חדשה במקום מרוחק, הבנתי שמספיק. לא בא לי יותר. לא רוצה. אני ילדה שרוצה אהבה ושמחת חיים ושהוריה יראו אותה. כך בעזרת הטכנלוגיה והאינטואיציה חיפשתי ומצאתי את אדל שהיא אומנם - טכנית, לא הביאה אותי לעולם הזה, אך רגשית נפשית פיזית היא כל כולה שלי ואני שלה ואין כל סיכוי שאני חוזרת אליכם, פשוט לא. 
+</pre>
+</div>
+<div created="20180306102632424" modified="20180306164658181" tags="לילי" title="לילי 17">
+<pre>[img[pictures/lily-17.jpg]]
+
+
+סיימתי את דברי. הם ביקשו לדבר רגע בצד. הם חזרו, הביטו בי ואמרו לי שהם נותנים לי להישאר אצל אדל ושהם צריכים לחשוב על זה. פתאום ריחמתי עליהם אך לא חזרתי בי. חיבקתי אותם והבטחתי להיות בקשר. אדל אמרה להם שהם תמיד מוזמנים לבקר. הם יצאו, והכנו שוקו.
+
+סוף
+</pre>
 </div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
 <pre>[img[pictures/KLL6V2vFdC26B5R4.jpg]]
