--- a/index.html
+++ b/index.html
@@ -8892,7 +8892,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לילי 15]] [[דם אמיתי]]" title="$:/StoryList">
+<div list="[[לילי 17]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11190,8 +11190,7 @@ different tastes, but there were things we both love: family, work, people in al
 זהו, שה ז'נבייב דליקטסן נפתח שלשום. אני מאד שמחה אך זהירה - כי זו בהחלט משימה יומרנית לבחור מה יהיה, מה אני מציגה, הן מבחינת חומרי גלם, הן מבחינת אוכל מוכן. בסופו של דבר ובתוספת החנות הצמודה שהתפנתה, יש חנות, שדלפק האוכל המוכן שבה נמשך לתוך החלל שבו אפשר לאכול בהגשה עצמית. המטבח נשאר באותו גודל ומהחלונות שלו אנו מוציאים, כחלק מהקניה, ירקות מאודים או צרובים על פלנצ'ה. יש גבינות, נקניקים, בשרים. סנדביצ'ים, תבשילים. מבחינת חומרים גלם, כולל פרות וירקות - אנחנו מוכרים ממה שקנינו בשוק לבישול שלנו וגם נותנים מתכונים למי שרוצה להכין בבית, ויש כמובן פינת קפה.</pre>
 </div>
 <div created="20180307125005127" modified="20180308155737731" tags="סדרות [[חיות אוכל]]" title="דם אמיתי">
-<pre>
-[img[pictures/true-blood.jpg]]
+<pre>[img[pictures/true-blood.jpg]]
 
 !!![[יויו]]:
 
@@ -13128,13 +13127,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 כשהייתי בת ארבע והתחלתי לקרוא, הבנתי שישנם אנשים בעולם הזה שמאד רוצים ילדים אך מסיבות טכניות אין להם. לעומתכם, שטכנית לא הייתה לכם כל בעיה וכך גם גידלתם אותי. אני מתוחזקת ומתופעלת לעילא בביתכם, עם מיטב המטפלות והמבשלות ותודה לכם על ההשכלה הרחבה. אך לאחר שגיליתי שמימי עומדת לעזוב – מסיבות טכניות כמובן – עם בעלה שקיבל עבודה חדשה במקום מרוחק, הבנתי שמספיק. לא בא לי יותר. לא רוצה. אני ילדה שרוצה אהבה ושמחת חיים ושהוריה יראו אותה. כך בעזרת הטכנלוגיה והאינטואיציה חיפשתי ומצאתי את אדל שהיא אומנם - טכנית, לא הביאה אותי לעולם הזה, אך רגשית נפשית פיזית היא כל כולה שלי ואני שלה ואין כל סיכוי שאני חוזרת אליכם, פשוט לא. 
 </pre>
 </div>
-<div created="20180306102632424" modified="20180306164658181" tags="לילי" title="לילי 17">
+<div created="20180306102632424" modified="20180308162235930" tags="לילי" title="לילי 17">
 <pre>[img[pictures/lily-17.jpg]]
 
 
 סיימתי את דברי. הם ביקשו לדבר רגע בצד. הם חזרו, הביטו בי ואמרו לי שהם נותנים לי להישאר אצל אדל ושהם צריכים לחשוב על זה. פתאום ריחמתי עליהם אך לא חזרתי בי. חיבקתי אותם והבטחתי להיות בקשר. אדל אמרה להם שהם תמיד מוזמנים לבקר. הם יצאו, והכנו שוקו.
 
 סוף
+
+[img[pictures/lily-17-1.jpg]]
 </pre>
 </div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
