--- a/index.html
+++ b/index.html
@@ -8892,7 +8892,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לילי 17]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[על הספקטרום]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8912,7 +8912,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180305112926271" title="$:/temp/search">
+<div created="20161023184814872" modified="20180313093520991" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11189,12 +11189,12 @@ different tastes, but there were things we both love: family, work, people in al
 
 זהו, שה ז'נבייב דליקטסן נפתח שלשום. אני מאד שמחה אך זהירה - כי זו בהחלט משימה יומרנית לבחור מה יהיה, מה אני מציגה, הן מבחינת חומרי גלם, הן מבחינת אוכל מוכן. בסופו של דבר ובתוספת החנות הצמודה שהתפנתה, יש חנות, שדלפק האוכל המוכן שבה נמשך לתוך החלל שבו אפשר לאכול בהגשה עצמית. המטבח נשאר באותו גודל ומהחלונות שלו אנו מוציאים, כחלק מהקניה, ירקות מאודים או צרובים על פלנצ'ה. יש גבינות, נקניקים, בשרים. סנדביצ'ים, תבשילים. מבחינת חומרים גלם, כולל פרות וירקות - אנחנו מוכרים ממה שקנינו בשוק לבישול שלנו וגם נותנים מתכונים למי שרוצה להכין בבית, ויש כמובן פינת קפה.</pre>
 </div>
-<div created="20180307125005127" modified="20180308155737731" tags="סדרות [[חיות אוכל]]" title="דם אמיתי">
+<div created="20180307125005127" modified="20180309163137175" tags="סדרות [[חיות אוכל]]" title="דם אמיתי">
 <pre>[img[pictures/true-blood.jpg]]
 
 !!![[יויו]]:
 
-אחחחח איזה טעים זה [[דם בלאדי|http://www.imdb.com/title/tt0844441/?ref_=ttep_ep_tt]] של מושבניקים החיים על אדמת לואיזיאנה ויש להם אחות פיה, יותר טעים מזה שבבקבוקים.</pre>
+אחחחח איזה טעים זה [[דם בלאדי|http://www.imdb.com/title/tt0844441/?ref_=ttep_ep_tt]] של [[מושבניקים|https://www.youtube.com/watch?v=OWq7FYyYarU]] החיים על אדמת לואיזיאנה ויש להם אחות פיה, יותר טעים מזה שבבקבוקים.</pre>
 </div>
 <div created="20161116210610208" modified="20170605164540478" tags="[[אחות כהן]]" title="דןדן">
 <pre>[img[pictures/dandan.jpg]]
@@ -14491,7 +14491,7 @@ __אופן ההכנה:__
 
 </pre>
 </div>
-<div created="20171209165611878" modified="20180128153911268" tags="[[אירי טוענת]]" title="על הספקטרום">
+<div created="20171209165611878" modified="20180313093516911" tags="[[אירי טוענת]]" title="על הספקטרום">
 <pre>[img[pictures/spectrum.jpg]]
 
 !!![[אירי]]:
@@ -14504,7 +14504,7 @@ __אופן ההכנה:__
 
 הדבר החשוב ביותר שעל כל אחת ואחד ללמוד מן השואה הוא, //שבכל אחת ואחד מאיתנו טמון הפוטנציאל להפוך לנאצי.//
 
-''שאלתם את עצמכם פעם איפה אתם על המדד הנאצי?''
+[[''שאלתם את עצמכם פעם איפה אתם על המדד הנאצי?''|https://www.youtube.com/watch?v=stN6ZjpbRYk]]
 
 האם אתם משתפים פעולה עם השלטונות? האם אתם מקבלי משרות? האם אתם משתפים פעולה עם התקשורת? האם לצרוך תקשורת נחשב שיתוף פעולה? האם אתם ממומנים על ידי גופים שממומנים על ידי גופים ממומנים?
 
