--- a/index.html
+++ b/index.html
@@ -8912,7 +8912,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180313093520991" title="$:/temp/search">
+<div created="20161023184814872" modified="20180313101726516" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -14491,7 +14491,7 @@ __אופן ההכנה:__
 
 </pre>
 </div>
-<div created="20171209165611878" modified="20180313093516911" tags="[[אירי טוענת]]" title="על הספקטרום">
+<div created="20171209165611878" modified="20180313111412033" tags="[[אירי טוענת]]" title="על הספקטרום">
 <pre>[img[pictures/spectrum.jpg]]
 
 !!![[אירי]]:
@@ -14513,7 +14513,7 @@ __אופן ההכנה:__
  
 שאלתם את עצמכם פעם האם אתם על איזשהו רצף? האם אתם על [[הרצף האוטיסטי?|כישורים חברתיים]] על רצף ההפרעות הנפשיות? מה הסינדרום שלכם? עד כמה אתם מכורים לסמים כולל תרופות מרשם? [[האם אתם יסודיים או שמא יש לכם ocd?|יסודי או ocd]] איפה עובר הקו בין פרפקציוניזם ל ocd? האם הייתם מוכנים להיות האינסטלטור של [[אושוויץ?|https://he.wikipedia.org/wiki/%D7%90%D7%95%D7%A9%D7%95%D7%95%D7%99%D7%A5]] הקבלן של  [[האוטובאן|https://en.wikipedia.org/wiki/Autobahn]]? האם יש סינדרום על שם מי שקורא לספקטרום [[מקשתת|http://hebrew-academy.org.il/2014/11/17/%D7%9E%D7%9C%D7%99%D7%90%D7%AA-%D7%94%D7%90%D7%A7%D7%93%D7%9E%D7%99%D7%94-%D7%9C%D7%9C%D7%A9%D7%95%D7%9F-%D7%94%D7%A2%D7%91%D7%A8%D7%99%D7%AA-%D7%90%D7%99%D7%A9%D7%A8%D7%94-%D7%A8%D7%A9%D7%99%D7%9E/]]? האם אתם שמים לב לחוסר צדק? חוסר השוויון? הכיבוש?
 
-האם אתם חושבים שהכיבוש השחית אתכם?
+[[האם אתם חושבים שהכיבוש השחית אתכם?|https://www.youtube.com/watch?v=vKZtzmjm-FM]]
 
 האם אתם רוצים להוציא אדם או קבוצת אנשים מסביבתכם על רקע של גזע, דת או מגדר?
 
